--- a/src/css/header.css
+++ b/src/css/header.css
@@ -26,11 +26,14 @@ body {
 header {
     position: relative;
     display: flex;
-    height: 80px;
+    height: 150px;
     min-width: 100vw;
+    user-select: none;
+    -ms-user-select: none;
+    -moz-user-select: none;
 }
 #header-container {
-    height: 100%;
+    height: 80px;
     position: absolute;
     background: rgb( 255, 253, 208);
     inset: 50px;
